--- a/react/formik/formik/package.json
+++ b/react/formik/formik/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.15.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
