--- a/node/node6/package.json
+++ b/node/node6/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node4",
+  "name": "node6",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "db": "^4.0.1",
-    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongo": "^0.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "nodemon": "^3.0.1"
   }
