--- a/node/url2/vercel-node-app/package.json
+++ b/node/url2/vercel-node-app/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "url2",
+  "name": "vercel-node-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.6.1",
-    "nodemon": "^3.0.1"
+    "mongoose": "^7.6.1"
   }
 }
