--- a/node/node6/package.json
+++ b/node/node6/package.json
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "7.6.0",
+    "mongoose": "^6.10.1",
     "nodemon": "^3.0.1"
   }
 }
