--- a/node/summa/frontend/markdown/package.json
+++ b/node/summa/frontend/markdown/package.json
@@ -10,9 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.16",
+    "aos": "^2.3.4",
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
+    "font-awesome": "^4.7.0",
+    "katex": "^0.16.9",
+    "markdown-to-jsx": "^7.3.2",
+    "mermaid": "^10.6.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^9.0.0",
+    "react-mermaid2": "^0.1.4",
+    "react-router-dom": "^6.17.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
